--- a/index.html
+++ b/index.html
@@ -29,14 +29,21 @@
                     <input type="password" id="login-password" class="nexus-input" placeholder="Tu contraseña">
                 </div>
                 
-                <button id="btn-login" class="nexus-btn nexus-btn-primary" style="width: 100%; margin-bottom: 15px;">
-                    Acceder al Sistema
+                <button type="button" id="btn-login" class="nexus-btn nexus-btn-primary" style="width: 100%; margin-bottom: 15px;">
+                 Acceder al Sistema
                 </button>
-                
-                <button id="btn-show-register" class="nexus-btn" style="width: 100%;">
-                    Crear Cuenta Nueva
+
+                <button type="button" id="btn-show-register" class="nexus-btn" style="width: 100%;">
+                 Crear Cuenta Nueva
                 </button>
-            </div>
+
+                <button type="button" id="btn-register" class="nexus-btn nexus-btn-success" style="width: 100%; margin-bottom: 15px;">
+                 Crear Cuenta
+                </button>
+
+                <button type="button" id="btn-show-login" class="nexus-btn" style="width: 100%;">
+                 Volver al Login
+                </button>
 
             <div id="register-form" class="nexus-form-group" style="display: none;">
                 <h3 class="login-title">Crear Cuenta</h3>
