--- a/index.html
+++ b/index.html
@@ -224,19 +224,28 @@
                     <p class="instructions">Permite que una persona que ya ingresó pueda volver a entrar</p>
                 </div>
 
-                <div class="admin-section" style="margin-top: 30px; padding-top: 20px; border-top: 1px solid rgba(255,255,255,0.1);">
-                    <h3 style="color: #ef4444;">⚙️ Administración Avanzada</h3>
-                    <div class="nexus-form-group">
-                        <p style="color: var(--nexus-text-secondary); margin-bottom: 15px;">
-                        <strong>⚠️ Zona de peligro:</strong> Estas acciones no se pueden deshacer
-                        </p>
-                        <button id="btn-limpiar-db" class="nexus-btn" style="background: #ef4444; color: white; border: none;">
-                        🗑️ Limpiar Base de Datos Completa
-                        </button>
-                        <p class="instructions" style="color: #fca5a5; font-size: 0.8rem;">
-                        Elimina TODOS los clientes y códigos usados.
-                        </p>
-                    </div>
+            <div class="admin-section" style="margin-top: 30px; padding-top: 20px; border-top: 1px solid rgba(255,255,255,0.1);">
+                <h3 style="color: #6366f1;">🔄 Sincronización</h3>
+                <div class="nexus-form-group">
+                    <button id="btn-forzar-sincronizacion" class="nexus-btn nexus-btn-primary">
+                    🔄 Forzar Sincronización
+                    </button>
+                    <button id="btn-debug-sincronizacion" class="nexus-btn" style="margin-left: 10px;">
+                    🐛 Debug Sincronización
+                    </button>
+                    <p class="instructions" style="font-size: 0.8rem;">
+                    Sincroniza manualmente los datos entre dispositivos
+                    </p>
+                </div>
+    
+                <h3 style="color: #ef4444; margin-top: 20px;">⚙️ Administración Avanzada</h3>
+                <div class="nexus-form-group">
+                    <button id="btn-limpiar-db" class="nexus-btn" style="background: #ef4444; color: white; border: none;">
+                    🗑️ Limpiar Base de Datos Completa
+                    </button>
+                    <p class="instructions" style="color: #fca5a5; font-size: 0.8rem;">
+                    Elimina TODOS los clientes y códigos usados. Solo para testing.
+                    </p>
                 </div>
             </div>
         </div>
