--- a/index.html
+++ b/index.html
@@ -189,6 +189,15 @@
                     </div>
                 </div>
 
+                <div class="filters-container">
+                    <div class="filter-buttons">
+                        <button class="filter-btn active" data-filter="all">Todos</button>
+                        <button class="filter-btn" data-filter="ingresaron">Ingresaron</button>
+                        <button class="filter-btn" data-filter="faltan">Faltan</button>
+                        <button class="filter-btn" data-filter="registrados">Registrados</button>
+                    </div>
+                </div>
+
                 <!-- BÚSQUEDA -->
                 <div class="search-section">
                     <div class="input-group">
